Fix not being able to scroll on pages by setting overflow: hidden depending on if nav is visible or not

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,7 +6,6 @@ body {
         Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     background-color: $color-bone;
     color: $color-graphite;
-    overflow: hidden;
 }
 
 a {
